# Pydurma

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: CI.yml
src/CommonSpell/: commonspeller.py  config.py  encoder.py  opf.py  plain_text.py  tokenizer.py
src/CommonSpell/aligners/: aligner.py  fdmp.py  post_processing_matrix.py
src/CommonSpell/bo/: normalizer_bo.py  tokenizer_bo.py
src/CommonSpell/input_filters/: pattern_filter.py
src/CommonSpell/serializers/: csv.py  docx.py  hfml.py  md.py  plain_text.py  serializer.py
src/CommonSpell/utils/: opf_utils.py  utils.py
src/CommonSpell/vulgaligners/: vulgaligner.py  vulgaligner_fdmp.py
src/CommonSpell/weighers/: matrix_weigher.py  token_weigher.py  token_weigher_count.py  token_weigher_op_confidence.py  token_weigher_valid_bo.py
src/Pydurma/: commonspeller.py  tokenizer.py
src/Pydurma/aligners/: aligner.py  fdmp.py  post_processing_matrix.py
src/Pydurma/bo/: normalizer_bo.py  tokenizer_bo.py
src/Pydurma/input_filters/: pattern_filter.py
src/Pydurma/serializers/: csv.py  docx.py  hfml.py  md.py  plain_text.py  serializer.py
src/Pydurma/utils/: opf_utils.py  utils.py
src/Pydurma/weighers/: matrix_weigher.py  token_weigher.py  token_weigher_count.py  token_weigher_op_confidence.py  token_weigher_valid_bo.py
src/vulgatizer/: README.md  config.py  tokenizer.py  vulgatizer_op_ocr.py  vulgatizer_plain_text.py
src/vulgatizer/bo/: normalizer_bo.py  tokenizer_bo.py
src/vulgatizer/normalizers/: normalizer_bo.py  normalizer_gen.py
src/vulgatizer/tokenizers/: tokenizer.py  tokenizer_bo.py  tokenizer_gen.py
src/vulgatizer/utils/: opf_utils.py  utils.py
src/vulgatizer/vocabularies/: vocabulary.py
src/vulgatizer/vulgaligners/: vulgaligner.py  vulgaligner_fdmp.py
src/vulgatizer/weighers/: matrix_weigher.py  token_weigher.py  token_weigher_count.py  token_weigher_op_confidence.py  token_weigher_valid_bo.py
tests/: test_op_ocr.py  test_simple_alignment.py
tests/aligner/: test_fdmp_aligner.py
tests/normalizer/: test_normalizer_bo.py
tests/preprocessor/filters/: test_pattern_filter.py
tests/preprocessor/normalizer/: test_normalizer_bo.py
tests/preprocessor/tokenizer/: test_tokenizer_bo.py
tests/serializers/: test_csv_serializer.py  test_docx_serializer.py  test_hfml_serializer.py  test_md_serializer.py  test_plain_text_serializer.py
tetcommon_spell/: common_spell.docx
